completed flex box overview and built simple layouts in new md file

--- a/HTML_CSS/CSS_Fundamentals/1.CSS_Fundamentals.md
+++ b/HTML_CSS/CSS_Fundamentals/1.CSS_Fundamentals.md
@@ -1081,7 +1081,7 @@ Next, we added the flex properties to our `li` elements:
 
 Here we discovered we needed to add the extra div element between the `a` and `p` tags. This is because we want these to elements to be grouped together and not side by side.
 
-# How to move whole sections
+## How to build an overall page layout with Flexbox
 
 We use the same approach.
 
@@ -1104,8 +1104,7 @@ article {
 }
 ```
 
-Something neat we can do is use the power of flexbox to let it automatically adjust our elements to their optimal width.
-So, if we define our `aside` element needs to be 300px and our `gap` is 75px; our `article` element needs to be 825px,
+Something neat we can do is use the power of flexbox to let our `article` element  automatically adjust to its optimal width. So, if we say our `aside` element needs to be 300px and our `gap` is 75px; our `article` element needs to be 825px,
 and we can shorthand this by defining:
 
 ```css
@@ -1114,12 +1113,11 @@ article {
 }
 ```
 
-# Introduction to CSS Grid
+## Introduction to CSS Grid
 
 CSS grid is currently the most modern, complete and easiest way to build layouts and bring structure to your webpage.
-<br>
 
-Similar to `flexbox` `css grid` is composed of grid containers and grid items. <br>
+Similar to `flexbox` `css grid` is composed of grid containers and grid items.
 
 To get started, we first identify our grid container and add the `display:grid;` property.
 
@@ -1135,9 +1133,7 @@ To get started, we first identify our grid container and add the `display:grid;`
 }
 ```
 
-Adding this property does nothing visually to our page because we have yet to define our `grid-template-columns`
-property which for each given value, a column will be made. For example, if we do `grid-template-columns: 33% 33% 33%`
-we will create 3 columns in our grid container.
+Adding this property does nothing visually to our page because we have yet to define our `grid-template-columns` property which for each given value, a column will be made. For example, if we do `grid-template-columns: 33% 33% 33%` we will create 3 columns in our grid container.
 
 ```css
 .container--1 {
@@ -1152,26 +1148,19 @@ we will create 3 columns in our grid container.
 }
 ```
 
-The summarized behavior here can be thought of as "how many columns do I want in my grid container?" For items that do
-not fix a even column number i.e. `grid-template-columns % grid items != 0` then new rows get added. <br>
+The summarized behavior here can be thought of as "how many columns do I want in my grid container?" For items that do not fix a even column number i.e. `grid-template-columns % grid items != 0` then new rows get added.
 
-We also note that just like flex-box, in CSS Grid, the elements will fill up the parent container in both height and
-width dimensions.
+We also note that just like flex-box, in CSS Grid, the elements will fill up the parent container in both height and width dimensions.
 
-<img src="img/css-grid-fillup.png" alt="css grid fill up parent container">
+!["css grid fill up parent container"](img/css-grid-fillup.png)
 
-We see that the first row is taller than the second but only because `.el--3` has a height of `150px` which means, any
-grid items in that row will have to also be 150px to accommodate for ths property definition. Otherwise, the height
-would only be the necessary height needed for this content. <br>
+We see that the first row is taller than the second but only because `.el--3` has a height of `150px` which means, any grid items in that row will have to also be 150px to accommodate for ths property definition. Otherwise, the height would only be the necessary height needed for this content.
 
-We can size rows as well using the `grid-template-rows` property. For example, if we want the first row to be 300px and
-the second to be 100px we can use `grid-template-rows: 300px 100px`. <br>
+We can size rows as well using the `grid-template-rows` property. For example, if we want the first row to be 300px and the second to be 100px we can use `grid-template-rows: 300px 100px`.
 
-Lastly, to add spacing between grid items we cannot use `margin` in css grid but rather we must use the `gap` (once
-called `grid-gap`) property which will add the gap between the columns and rows. One neat thing about css grid is that
-we can also define `column-gap` and `row-gap` individually.
+Lastly, to add spacing between grid items we cannot use `margin` in css grid but rather we must use the `gap` (once called `grid-gap`) property which will add the gap between the columns and rows. One neat thing about css grid is that we can also define `column-gap` and `row-gap` individually.
 
-<img src="img/row-and-column-gap-cssgrid.png" alt="showing row and column gap">
+!["showing row and column gap"](img/row-and-column-gap-cssgrid.png)
 
 With these 5 css grid properties, we can create similar layouts:
 
