building css grid templates and added notes

--- a/HTML_CSS/CSS_Fundamentals/1.CSS_Fundamentals.md
+++ b/HTML_CSS/CSS_Fundamentals/1.CSS_Fundamentals.md
@@ -1117,7 +1117,7 @@ article {
 
 CSS grid is currently the most modern, complete and easiest way to build layouts and bring structure to your webpage.
 
-Similar to `flexbox` `css grid` is composed of grid containers and grid items.
+Similar to flexbox, css grid is composed of grid containers and grid items.
 
 To get started, we first identify our grid container and add the `display:grid;` property.
 
@@ -1152,9 +1152,9 @@ The summarized behavior here can be thought of as "how many columns do I want in
 
 We also note that just like flex-box, in CSS Grid, the elements will fill up the parent container in both height and width dimensions.
 
-!["css grid fill up parent container"](img/css-grid-fillup.png)
+The only reason the first row appears "taller" than the second is because `el-3` has a `height:150px;` property which means all other elements that share a row with it will also be 150px. If this height was not defined, then the elements would only take up the needed height OF THE TALLEST ELEMENT present in that row.
 
-We see that the first row is taller than the second but only because `.el--3` has a height of `150px` which means, any grid items in that row will have to also be 150px to accommodate for ths property definition. Otherwise, the height would only be the necessary height needed for this content.
+!["css grid fill up parent container"](img/css-grid-fillup.png)
 
 We can size rows as well using the `grid-template-rows` property. For example, if we want the first row to be 300px and the second to be 100px we can use `grid-template-rows: 300px 100px`.
 
@@ -1162,7 +1162,7 @@ Lastly, to add spacing between grid items we cannot use `margin` in css grid but
 
 !["showing row and column gap"](img/row-and-column-gap-cssgrid.png)
 
-With these 5 css grid properties, we can create similar layouts:
+With these 5 css grid properties, we can create the layout shown above:
 
 ```css
 .container--1 {
@@ -1181,54 +1181,52 @@ With these 5 css grid properties, we can create similar layouts:
 }
 ```
 
-# A CSS Grid Overview
+## A CSS Grid Overview
 
-<dl>
-    <dt> CSS Grid </dt>
-<dd> A set of CSS properties for building 2-dimensional layouts. </dd>
-</dl>
+CSS Grid
+
+A set of CSS properties for building 2-dimensional layouts.
 
 The main idea behind CSS grid is that we can divide a container element into rows and columns that can be filled with
-its child elements. Because of this, we can write less nested HTML and easier to read CSS. <br>
+its child elements. Because of this, we can write less nested HTML and easier to read CSS.
 
 Flexbox and CSS grid work hand in hand:
 
 * flexbox is great for 1-dimensional layouts
 * css grid is great for 2-dimensional layouts.
 
-# CSS Grid Terminology
+## CSS Grid Terminology
 
-<dl>
-    <dt> Grid Container </dt>
-<dd> The element on which we use CSS Grid. </dd>
-<dd> Created by defining the display: grid; property. </dd>
+Grid Container
 
-<dt> Grid Items </dt>
-<dd> The direct children of the Grid Container element. </dd>
+* The element on which we use CSS Grid.
+* Created by defining the `display: grid;` property.
 
-<dt> Row Axis </dt>
-<dd> Represents the horizontal axis. </dd>
-<dd> Direction cannot be changed. </dd>
+Grid Items
 
-<dt> Column Axis </dt>
-<dd> Represents the vertical axis. </dd>
-<dd> Direction cannot be changed. </dd>
+* The direct children of the Grid Container element.
 
-</dl>
+Row Axis
 
-<img src="img/css-grid-terms.png" alt="common css grid terms definitions">
+* Represents the horizontal axis.
+* Direction cannot be changed.
 
-Grid Lines serve as location points, the intersection of these grid lines create containers in which we can place our
-items. These containers/areas created by the grid lines intersecting are called grid-cells.
+Column Axis
 
-# Common CSS Grid properties
+* Represents the vertical axis.
+* Direction cannot be changed.
 
-<img src="img/common-grid-properties.png" alt="common grid properties defined">
+!["common css grid terms definitions"](img/css-grid-terms.png)
 
-# Sizing Grid Columns and Rows
+Grid Lines serve as location points, the intersection of these grid lines create containers in which we can place our items. These containers/areas created by the grid lines intersecting are called grid-cells.
 
-We can implement flexable columns and rows using the `fr` (fraction/fractional) unit. For example, if we want out last
-items to fill up the remaining grid container space we can implement the following:
+## Common CSS Grid properties
+
+!["common grid properties defined"](img/common-grid-properties.png)
+
+## Sizing Grid Columns and Rows
+
+We can implement flexible columns and rows using the `fr` (fraction/fractional) unit. For example, if we want out last items to fill up the remaining grid container space we can implement the following:
 
 ```css
 .container--1 {
