--- a/HTML_CSS/CSS_Fundamentals/1.CSS_Fundamentals.md
+++ b/HTML_CSS/CSS_Fundamentals/1.CSS_Fundamentals.md
@@ -1244,11 +1244,9 @@ We can implement flexible columns and rows using the `fr` (fraction/fractional) 
 }
 ```
 
-In the grid container, we define the respective `grid-template-columns` value of however many columns we want to expand
-to be `1fr`. This is similar to setting `flex:1;` in flexbox. <br>
+In the grid container, we define the respective `grid-template-columns` value of however many columns we want to expand to be `1fr`. This is similar to setting `flex:1;` in flexbox.
 
-We can achieve even spaced columns by defining the x_column_vals to be `grid-template-columns: 1fr 1fr 1fr 1fr;`.
-Proportionally, this gives all `grid-items` an equal amount of width allowed per the grid container. <br>
+We can achieve proportional columns by using `grid-template-columns: 1fr 1fr 1fr 1fr;`. Which gives all `grid-items` an equal amount of width allowed per the grid container.
 
 When wanting to create proportional multiples (one column be double the other) we must follow these steps:
 
@@ -1266,31 +1264,92 @@ To have the first column take up half of all space available we use `grid-templa
 
 We must remember that this property is the relations of grid items and grid container and not grid items vs grid items.
 
-Here we can also use the `auto` argument `grid-template-columns:auto` which will make the grid container only take up
-the space its content needs.
+Here we can also use the `auto` argument `grid-template-columns:auto` which will make the grid container only take up the space its content needs.
+
+```css
+.container-one {
+    background-color: black;
+    font-size: 24px;
+    display: grid;
+    grid-template-columns: 2fr 1fr auto;
+    gap: 15px;
+}
+```
 
 ## repeat() function
 
-CSS grid introduced a `repeat()` function which lets us specify `how many columns, column size` as arguments. For
-example, we can re-write our `grid-template-columns` property using `grid-template-columns: repeat(4, 1fr);`.
+CSS grid introduced a `repeat()` function which lets us specify <# of columns, column size> as arguments. For example, we can re-write our `grid-template-columns: 1fr 1fr 1fr 1fr` property using `grid-template-columns: repeat(4, 1fr);`.
 
 * 4 is the number of columns
 * 1fr is the column sizing property
 
 ## Styling Rows
 
-Similarly to columns, we can use the `1fr` measurement by using the `grid-auto-rows: 1fr 1fr;` property. However, if we
-do not have a specified width the elements will only take up the height their content needs. <br>
+Similarly to columns, we can use the `1fr` measurement by using the `grid-auto-rows: 1fr 1fr;` property. However, if we do not have a specified height the elements will only take up the height their content needs.
 
-This can be summarized by "the height of each row track will be the height of the tallest grid item element." Here, we
-can define a `height` property for the grid container to add space that the grid items can now take up. <br>
+This can be summarized by "the height of each row track will be the height of the tallest grid item element." Here, we can define a `height` property for the grid container to add space that the grid items can now take up.
 
-The combination of `grid-template-rows: 1fr auto` will make the first row 1 fractional unit and the second row will only
-take up the space needed for its content.
+The combination of `grid-template-rows: 1fr auto` will make the first row 1 fractional unit and the second row will only take up the space needed for its content.
 
-# Placing and Spanning Grid Items
+So if `el-1` has `height:100px` and we use `grid-template-rows: 1fr auto`, the first row is the defined height of 100px but since row two is auto and there is no defined height, it will only be the height the content needs to fit.
+!["row in css grid with defined height](/HTML_CSS/CSS_Fundamentals/img/row-one-with-height.png)
 
-We use the grid lines, which can be made visible by inspecting the page, to place grid items anywhere we want. <br>
+Now, if we implement `grid-template-rows: 1fr 1fr;` with a defined height on a element we get...
+
+!["height on element and 1fr applied to all rows](/HTML_CSS/CSS_Fundamentals/img/height-with-1fr.png)
+
+And if we implement `grid-template-rows: auto auto;` or `grid-template-rows: 1fr 1fr;`with NO defined height on an element we get ...
+!["1fr or auto with no height on element](/HTML_CSS/CSS_Fundamentals/img/1fr-no-height.png)
+
+Alternatively, if we give our grid-container an explicit height, our elements will have to fill up that space so even thought they don't have a set height, they will still fill up the parent grid-container.  So, if we implement the following:
+
+```css
+.container-one {
+    background-color: black;
+    font-size: 24px;
+    display: grid;
+    grid-template-columns: 2fr 1fr auto;
+    /* 1fr 1fr 1fr will give us square boxes */
+    grid-template-rows: 1fr 1fr;
+    gap: 15px;
+    /* explicitly giving the grid-container a height */
+    height: 400px;
+}
+
+/* AND NO HEIGHT ON THE ELEMENTS */
+.el-1 {
+    background-color: red;
+}
+
+.el-2 {
+    background-color: blue;
+}
+
+.el-3 {
+    background-color: yellow;
+}
+
+.el-4 {
+    background-color: orange;
+
+}
+
+.el-5 {
+    background-color: brown;
+}
+
+.el-6 {
+    background-color: blueviolet;
+}
+```
+
+Our elements will NOT be only the height of their content because it is their job to fill up the parent grid-container.
+
+!["having a set height on parent grid container](/HTML_CSS/CSS_Fundamentals/img/grid-container-with-height.png)
+
+## Placing and Spanning Grid Items
+
+We use the grid lines, which can be made visible by inspecting the page, to place grid items anywhere we want.
 
 For example, if we want to place element 8 in column 2 row 1 we implement the following CSS rules:
 
