--- a/HTML_CSS/CSS_Fundamentals/1.CSS_Fundamentals.md
+++ b/HTML_CSS/CSS_Fundamentals/1.CSS_Fundamentals.md
@@ -1349,55 +1349,73 @@ Our elements will NOT be only the height of their content because it is their jo
 
 ## Placing and Spanning Grid Items
 
-We use the grid lines, which can be made visible by inspecting the page, to place grid items anywhere we want.
+We can use the grid lines, which can be made visible by inspecting the page, to place grid items anywhere we want.
 
-For example, if we want to place element 8 in column 2 row 1 we implement the following CSS rules:
+For example, if we want to place element 6 in column 2 row 1 we implement the following CSS rules:
 
 ```css
-.el--8 {
-    grid-column: 2/3;
-    grid-row: 1/2;
+.el-6 {
+    background-color: blueviolet;
+    grid-column: 2/ 3;
+    grid-row: 1 / 2;
 }
 ```
 
-Here we specify two things:
+This produces the following layout.
 
-1. What row/column the element starts at.
-2. What row/column the element ends at.
+!["placing grid items using grid-column and grid-row"](/HTML_CSS/CSS_Fundamentals/img/moving-gird-items.png)
+
+For element 6 we provide:
+
+* `grid-column: <column to start> / <column to end>`
+* `grid-row: <row to start> / <row to end>`
 
 We can also use shorthand if the next value is +1 from the starting row/column.
 
 ```css
-.el--2 {
-    grid-column: 1;
-    grid-row: 2;
+.el-6 {
+    background-color: blueviolet;
+    grid-column: 2; /*  column end value is 3 which is +1 from where column start*/
+    grid-row: 1; /*  row end value is 2 which is +1 from where row start*/
 }
 ```
 
 In the same way, we can have an item span across multiple grid cells by defining the end that is not +1.
 
+Here, we want element 6 to span two columns wide.
+!["spanning multi-column wide"](/HTML_CSS/CSS_Fundamentals/img/spanning-multiple-col-wide.png)
+
 ```css
-.el--8 {
-    grid-column: 2/5;
-    grid-row: 1/2;
+.el-6 {
+    background-color: blueviolet;
+    grid-column: 2 / 4;
+    grid-row: 1;
 }
 ```
 
-<img src="img/grid-expanded-item.png" alt="grid item expanded out">
+We also added a new row to our grid container since element 6 pushed element 5 to a new row. We only accounted for 2 rows when declaring `grid-template-rows: 1fr 1fr;` but now, we must add one more.
 
-We can also simply use the `span` property on a grid item to have it expand across a defined amount of rows or columns.
-For example, if we wanted to have item 7 to start at column 2 and expand out 3 columns we would
-use `grid-column: 2/ span 3;`. Which reads as "start in column 2 and expand out 3 columns including 2." <br>
+```css
+.container-one {
+    background-color: black;
+    font-size: 24px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 15px;
+    height: 500px;
+}
+```
 
-In some situations, we won't know how many expandable columns there are, or we don't want to think about calculating and
-worrying about getting it right. For these situations, we use `grid-column: 1 / -1`.
+We can also simply use the `span` property on a grid item to have it expand across a defined amount of rows or columns. For example, if we wanted to have item 7 to start at column 2 and expand out 3 columns we would use `grid-column: 2/ span 3;`. Which reads as "start in column 2 and expand out 3 columns including 2."
 
-The same properties apply to `grid-row:`. We do have to be cautious because if we define a property that gets in the way
-of another element a new row or new column will be created to allow for space/the property implementation.
+In some situations, we won't know how many expandable columns there are, or we don't want to think about calculating and worrying about getting it right. For these situations, we use `grid-column: 1 / -1`.
 
-# Aligning Grid Items and Tracks
+The same properties apply to `grid-row:`. We do have to be cautious because if we define a property that gets in the way of another element a new row or new column will be created to allow for space/the property implementation.
 
-Using CSS grid, we can align both tracks inside the grid container and grid items inside the tracks. <br>
+## Aligning Grid Items and Tracks
+
+Using CSS grid, we can align both tracks inside the grid container and grid items inside the tracks.
 
 ## Align Tracks
 
