completed html and css notes, building new project

--- a/HTML_CSS/CSS_Fundamentals/1.CSS_Fundamentals.md
+++ b/HTML_CSS/CSS_Fundamentals/1.CSS_Fundamentals.md
@@ -1407,9 +1407,29 @@ We also added a new row to our grid container since element 6 pushed element 5 t
 }
 ```
 
-We can also simply use the `span` property on a grid item to have it expand across a defined amount of rows or columns. For example, if we wanted to have item 7 to start at column 2 and expand out 3 columns we would use `grid-column: 2/ span 3;`. Which reads as "start in column 2 and expand out 3 columns including 2."
+We can also simply use the `span` property on a grid item to have it expand across a defined amount of rows or columns.
 
-In some situations, we won't know how many expandable columns there are, or we don't want to think about calculating and worrying about getting it right. For these situations, we use `grid-column: 1 / -1`.
+!["span across 3 columns"](/HTML_CSS/CSS_Fundamentals/img/span-across-columns.png)
+
+For example, the screenshot above shows how element 5 starts at column 1 and expands across 3 columns. This css property reads as "start in column 1 and expand out 3 columns."
+
+```css
+.el-5 {
+    background-color: brown;
+    grid-column: 1 / span 3;
+}
+```
+
+We can also use the `-1` locator. Which automatically takes the element to the end.
+
+```css
+.el-5 {
+    background-color: brown;
+    grid-column: 1 / -1;
+}
+```
+
+We use this because in some situations, we won't know how many expandable columns there are, or we don't want to think about calculating and worrying about getting it right. For these situations, we use `grid-column: 1 / -1`.
 
 The same properties apply to `grid-row:`. We do have to be cautious because if we define a property that gets in the way of another element a new row or new column will be created to allow for space/the property implementation.
 
@@ -1419,40 +1439,106 @@ Using CSS grid, we can align both tracks inside the grid container and grid item
 
 ## Align Tracks
 
-To align grid tracks we must first have the grid smaller than the grid container. The two properties we can use here
-are:
+To align grid tracks we must first have the grid tracks be smaller than the grid container, which creates "empty space". To do this, we made the `grid-template-columns` and `grid-template-rows` have a structure that is less than the parent css container measurements, in both width and height.
+
+So, if our parent is 1200 px wide and 500px height.
+
+Our grid tracks are 630px wide and 415px high (Total dimensions with gap).
+
+```css
+.container-one {
+    background-color: rgb(95, 92, 92);
+    font-size: 24px;
+    display: grid;
+    grid-template-columns: 200px 200px 200px;
+    grid-template-rows: 200px 200px;
+    gap: 15px;
+    height: 500px;
+
+}
+
+```
+
+!["tracks smaller than parent"](/HTML_CSS/CSS_Fundamentals/img/tracks-smaller-than-parent.png)
+
+The two properties we can use here are:
 
 1. `justify-content` (horizontal alignment) FOR ROWS
 2. `align-content` (vertical alignment) FOR COLUMNS
 
-Each track can be though of as a unit of column or row. For our example, we can `space-evenly` the content to get evenly
-spaced out columns tracks. To summarize here, rows are aligned using `justify-content` and columns are aligned using the
-`align-content` property.
+So, we can center our content using the following properties:
+
+```css
+.container-one {
+    background-color: rgb(95, 92, 92);
+    font-size: 24px;
+    display: grid;
+    grid-template-columns: 200px 200px 200px;
+    grid-template-rows: 200px 200px;
+    gap: 15px;
+    height: 500px;
+    justify-content: center;
+    align-content: center;
+
+}
+```
+
+!["centered track content"](/HTML_CSS/CSS_Fundamentals/img/centered-content-in-parent-grid-container.png)
 
 ## Align Items inside cells
 
 We can also align items inside cells by using `align-items` (COLUMNS) and `justify-items` (ROWS).
 
-```css
-/* ALIGNING CONTENT INSIDE CELLS */
-align-items: start
-
-;
-justify-items: center
-
-;
-```
-
-The cells are shown by using the dev tools.
-
-<img src="img/items-placement.png" alt="aligning items inside cells">
-
-In similar fashion, we can override these properties by using `justify-self` and `align-self`. This is a good way to
-center individual items in CSS grid.
+So if we apply the following properties, we get:
 
 ```css
-.el--3 {
-    justify-self: stretch;
-    align-self: stretch;
+.container-one {
+    background-color: rgb(95, 92, 92);
+    font-size: 24px;
+    display: grid;
+    grid-template-columns: 200px 200px 200px;
+    grid-template-rows: 200px 200px;
+    gap: 15px;
+    height: 500px;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    justify-items: center;
+
 }
 ```
+
+!["align items inside cells"](/HTML_CSS/CSS_Fundamentals/img/aligned-items-inside-grid-cell.png)
+
+However, we can keep the item element and simply align the text using a combination of both css grid and flexbox. If we create each element as a flex-container, we can then manipulate the items without getting the collapsed width and height.
+
+```css
+.container-one {
+    background-color: rgb(95, 92, 92);
+    font-size: 24px;
+    display: grid;
+    grid-template-columns: 200px 200px 200px;
+    grid-template-rows: 200px 200px;
+    gap: 15px;
+    height: 500px;
+    justify-content: center;
+    align-content: center;
+    /* remove these properties */
+    /* align-items: center;
+    justify-items: center; */
+
+}
+```
+
+Each element is now a flex container...
+
+```css
+.el {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+```
+
+Which results in the following:
+!["flexbox and css grid together"](/HTML_CSS/CSS_Fundamentals/img/flexbox-and-grid.png)
