starting javascript DOM

--- a/JavaScript/1.Fundamentals.md
+++ b/JavaScript/1.Fundamentals.md
@@ -1,1 +1,18 @@
 # JavaScript Fundamentals
+
+## Object
+
+```javascript
+const Baker = {
+    age: 9,
+    home: 'Houston',
+    role: 'best good boy',
+    friends: ['Camila','Luna','Bella']
+}
+```
+
+When using `prompt` with an object, we need to use `object[]` notation to return the correct key:value. Otherwise, we will get `undefined` which is the value returned when a property that does not exist in an object is requested.
+
+## Object Methods
+
+Since an object can contains various data types as key-value pairs, we can add functions to the representation of an object like the following.
