how to handle click events with JS

--- a/JavaScript/2.DOM-Notes.md
+++ b/JavaScript/2.DOM-Notes.md
@@ -63,3 +63,14 @@ document.querySelector(".check").addEventListener(
     }
 )
 ```
+
+## Dynamic Styling with EventListener
+
+```javascript
+// Dynamic styling dependent of click 
+
+h1 = document.querySelector(".hero-title")
+h1.addEventListener('click', function(){
+    h1.textContent = "Jose Servin"
+})
+```
