fix password accessing infinite recursion error

--- a/Flask/Docs/FlaskMarket/01.BuildNotes.md
+++ b/Flask/Docs/FlaskMarket/01.BuildNotes.md
@@ -6,14 +6,22 @@ This project is a simple marketplace application where users can register and lo
 
 ## Repo Structure
 
-
 ```terminal
+.
 ├── app
 │   ├── __init__.py
-│   ├── forms.py
+│   ├── forms
+│   │   ├── __init__.py
+│   │   ├── login_form.py
+│   │   ├── purchase_item_form.py
+│   │   ├── register_form.py
+│   │   └── sell_item_form.py
 │   ├── instance
 │   │   └── market.db
-│   ├── models.py
+│   ├── models
+│   │   ├── __init__.py
+│   │   ├── item.py
+│   │   └── user.py
 │   ├── routes
 │   │   ├── __init__.py
 │   │   ├── home.py
@@ -31,6 +39,8 @@ This project is a simple marketplace application where users can register and lo
 │       ├── login.html
 │       ├── market.html
 │       └── register.html
+├── add_item_with_user.py
+├── add_user_to_item.py
 ├── create_item.py
 ├── create_sample_data.py
 ├── create_user.py
@@ -38,11 +48,7 @@ This project is a simple marketplace application where users can register and lo
 ├── remove_user_from_item.py
 ├── requirements.txt
 ├── reset_database.py
-├── add_item_with_user.py
-├── add_user_to_item.py
-├── run.py
-└── scripts
-    └── __init__.py
+└── run.py
 ```
 
 ## Models
