add Flask Market app documentation

--- a/Flask/Docs/FlaskMarket/01.BuildNotes.md
+++ b/Flask/Docs/FlaskMarket/01.BuildNotes.md
@@ -233,3 +233,133 @@ Our form is defined in our `register_form.py` file and contains the fields our u
 Finally, in our `register.html` we work with the initialized form object and call present the field to our user by calling them using jinja syntax.
 
 This Form --> Model --> HTML linking is essentially how we combine the font-end with the backend.
+
+## Flask Validations
+
+The three main call-outs with form validations are
+
+1. implementing CSRF protection via `form.hidden_tag()`
+
+    ```html
+    <form method="POST" class="form-register" style="color:white">
+            {# Used by Flask-WTF to implement CSRF protection #}
+            {{ form.hidden_tag() }}
+            <img class="mb-4" src="https://res.cloudinary.com/jimshapedcoding/image/upload/v1597332609/android-icon-192x192_ove2a7.png" alt="">
+            <h1 class="h3 mb-3 font-weight-normal">
+                Please Create your Account
+            </h1>
+            <br>
+            {# This label is coming from our ./forms/register_form.py label definition #}
+            {{ form.username.label() }}
+            {{ form.username(class="form-control", placeholder="User Name") }}
+
+            {{ form.email_address.label() }}
+            {{ form.email_address(class="form-control", placeholder="Email Address") }}
+
+            {{ form.password1.label() }}
+            {{ form.password1(class="form-control", placeholder="Password") }}
+
+            {{ form.password2.label() }}
+            {{ form.password2(class="form-control", placeholder="Confirm Password") }}
+
+            <br>
+
+            <div class="checkbox mb-3">
+                <h6>Already have an account?</h6>
+                <a class="btn btn-sm btn-secondary" href="{{ url_for('login.login_page') }}">Login</a>
+            </div>
+
+            {{ form.submit(class="btn btn-lg btn-block btn-primary") }}
+
+        </form>
+    ```
+
+2. Configuring a secret key due to users POST request.
+
+    ```python
+    def create_app():
+        app = Flask(__name__)
+
+        # Configuring the application
+        database_uri = "sqlite:////Users/joseservin/AllThingsFullStack/Flask/FlaskMarket/app/instance/market.db"
+        app.config["SQLALCHEMY_DATABASE_URI"] = database_uri
+        app.config["SQLALCHEMY_TRACK_MODIFICATIONS"] = False
+        # Secret Key is needed due to form using POST request
+        app.config["SECRET_KEY"] = "ec9439cfc6c796ae2029594d"
+    ```
+
+3. Writing validation tests in our Form definition and executing them via our Route.
+
+    Form
+
+    ```python
+    username = StringField(
+        label="User Name:", validators=[Length(min=2, max=30), DataRequired()]
+    )
+    email_address = StringField(
+        label="Email Address:", validators=[Email(), DataRequired()]
+    )
+    password1 = PasswordField(
+        label="Password:", validators=[Length(min=6), DataRequired()]
+    )
+    password2 = PasswordField(
+        label="Confirm Password:", validators=[EqualTo("password1"), DataRequired()]
+    )
+    submit = SubmitField(label="Create Account")
+    ```
+
+    Route - handles both validation check and errors that occurred due to failed validations.
+
+    ```python
+    @register_bp.route("/register", methods=["GET", "POST"])
+    def register_page():
+        register_form = RegisterForm()
+        if request.method == "POST" and register_form.validate():
+
+        ...
+
+        # if the form contains validation errors
+        if register_form.errors != {}:
+            for err_msg in register_form.errors.values():
+                flash(
+                    f"There was an error with creating a user: {err_msg}", category="danger"
+                )
+    ```
+
+It is important we write these validation tests to avoid our Users seeing a `sqlalchemy.IntegrityError`.
+
+Here we see how our `Models` are tied with our `Forms`. In our `Model/User` we specified that the `username` field must be `unique=True`; therefor in our `Form/register_form`, when we submit a new user with an already existing username, we fail the unique constraint check which results in the SQLAlchemy error. And to reiterate, the call to run these validations occur in our `Route/register`.
+
+## Flashing Messages
+
+To flash messages we first write our `flash()` messages in our `route/` and leverage the jinja `get_flashed_messages()` function in our HTML.
+
+Here, we are choosing to flash ALL messages in our `base.html`; this way, we can flash messages in other routes and not have them in each html page for that route.
+
+```html
+</nav>
+      {% with messages = get_flashed_messages(with_categories=true) %}
+         {% if messages %}
+            {% for category, message in messages %}
+               <div class="alert alert-{{ category }}">
+                  <button type="button" class="m1-2 mb-1 close" data-dismiss="alert" aria-label="Close">
+                     <span aria-hidden="true">&times;</span>
+                  </button>
+                  {{ message }}
+               </div>
+            {% endfor %}
+         {% endif %}
+      {% endwith %}
+```
+
+Even more specific, we flash all messages under our nav. We also make sure to capture categories to then call custom Bootstrap classes that will dynamically change our messages to be either red, green, informative etc.
+
+```python
+flash(
+    f"Account created successfully! You are now logged in as {
+        user_to_create.username}",
+        category="success",
+    )
+```
+
+More info on Bootstrap Alerts can be found [here](https://getbootstrap.com/docs/4.0/components/alerts/)
