Flask secure password notes

--- a/Flask/Docs/FlaskMarket/01.BuildNotes.md
+++ b/Flask/Docs/FlaskMarket/01.BuildNotes.md
@@ -288,7 +288,9 @@ The three main call-outs with form validations are
         app.config["SECRET_KEY"] = "ec9439cfc6c796ae2029594d"
     ```
 
-3. Writing validation tests in our Form definition and executing them via our Route.
+3. Form validation & Model validation
+
+    There are two types of validations that are occurring here. The first one is our Form validation code which is for each form field and runs in our `Route` via the `form.validate()` function call.
 
     Form
 
@@ -326,9 +328,56 @@ The three main call-outs with form validations are
                 )
     ```
 
-It is important we write these validation tests to avoid our Users seeing a `sqlalchemy.IntegrityError`.
+    The second type are validation tests that run automatically due to our Form inheriting from the `FlaskForm` class. These type of test start with `validate` prefix and includes a field from our Form. Ex, `validate_username()`.
 
-Here we see how our `Models` are tied with our `Forms`. In our `Model/User` we specified that the `username` field must be `unique=True`; therefor in our `Form/register_form`, when we submit a new user with an already existing username, we fail the unique constraint check which results in the SQLAlchemy error. And to reiterate, the call to run these validations occur in our `Route/register`.
+    It is important we write these validation tests to avoid our Users seeing a `sqlalchemy.IntegrityError`.
+
+
+    ```python
+
+    # Handling existing username error
+    # Flask Forms will automatically execute our validate_x() functions; we must make sure x is a form field.
+    # We validate conditions that would go against our User Model and generate SQLAlchemy errors
+
+    def validate_username(self, username_to_check):
+        """
+        Validate if the provided username already exists in the database.
+
+        Args:
+            username_to_check (str): The username to be checked.
+
+        Raises:
+            ValidationError: If the username already exists in the database.
+        """
+
+        user = User.query.filter_by(username=username_to_check.data).first()
+        if user:
+            raise ValidationError(
+                "Username already exists! Please try a different username"
+            )
+
+    # Handling email address already exists
+    def validate_email_address(self, email_address_to_check):
+        """
+        Validate if the provided email address already exists in the database.
+
+        Args:
+            email_address_to_check (str): The email address to be checked.
+
+        Raises:
+            ValidationError: If the email address already exists in the database.
+        """
+        email_address = User.query.filter_by(
+            email_address=email_address_to_check.data
+        ).first()
+        if email_address:
+            raise ValidationError(
+                "Email Address already exists! Please try a different email address"
+            )
+
+    ```
+
+Here we see how our `Models` are tied with our `Forms`. In our `Model/User` we specified that the `username` field must be `unique=True`; therefor in our `Form/register_form`, when we submit a new user with an already existing username, we fail the unique constraint check which results in the SQLAlchemy error. And to reiterate, the call to run these validations occur in our `Route/register` `validate()` function.
 
 ## Flashing Messages
 
@@ -363,3 +412,69 @@ flash(
 ```
 
 More info on Bootstrap Alerts can be found [here](https://getbootstrap.com/docs/4.0/components/alerts/)
+
+## Secure Password Storage
+
+For password encryption we use the `Bcrypt` library and initialize the extension in our `app/__init__.py` file.
+
+```python
+bcrypt = Bcrypt()
+bcrypt.init_app(app)
+```
+
+In our User model we have the `password_hash` field which is not really starting out as a password hash has but rather, we convert it to a hash and save it as a new field called `password`.
+
+```python
+password_hash = db.Column(db.String(length=60), nullable=False)
+```
+
+```python
+class User(db.Model, UserMixin):
+    id = db.Column(db.Integer(), primary_key=True)
+    username = db.Column(db.String(length=30), nullable=False, unique=True)
+    email_address = db.Column(db.String(length=50),
+                              nullable=False, unique=True)
+    # For security reasons, we don't store the password but rather a password_hash
+    # We specify a length of 60 because that is the length the hashing algorithm returns.
+    password_hash = db.Column(db.String(length=60), nullable=False)
+    budget = db.Column(db.Integer(), nullable=False, default=1000)
+    # From the relationship we defined, we can view the User if we have an Item
+    # by looking at the Item.owned_user
+    items = db.relationship("Item", backref="owned_user", lazy=True)
+
+    @property
+    def password(self):
+        raise AttributeError("Password is not a readable attribute.")
+
+    @password.setter
+    def password(self, plain_text_password):
+        self.password_hash = bcrypt.generate_password_hash(plain_text_password).decode(
+            "utf-8"
+        )
+```
+
+This new property attribute is created by the `@property` decorator and the rules of defining this new property are defined in the `@setter` method.
+
+This reads as, "Before you create the password attribute, running the setter code."
+
+In our `Route/Register.py` we "set" the password when we create a new User instead of using the `password_hash` to run our `@setter` code.
+
+```python
+@register_bp.route("/register", methods=["GET", "POST"])
+def register_page():
+    register_form = RegisterForm()
+    if request.method == "POST" and register_form.validate():
+        # Because of the setter method in our User Model,
+        # we call password and not password_hash to create a User
+        user_to_create = User(
+            username=register_form.username.data,
+            email_address=register_form.email_address.data,
+            password=register_form.password1.data,
+        )
+```
+
+Again, we use the `password` attribute and not the`password_hash` from our `Models/user` because this calls the `@setter` method of our password attribute. So now, the "plain_text_password" is the `register_form.password1.data` which gets passed to the `@setter` method and we use the `self.password_hash` because our User model contains this field and that's what the User model knows.
+
+So from our User model, we grab this "password_hash" convert it to an actual password hash and save this as a new attribute called "password".
+
+To summarize, here we are seeing how our `Models/user` ties with our `routes/register` because of our `@setter` code and securely stores our Users password.
